--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <header role="banner">
       <!-- Left Side of Header -->
-      <div class="logo">
-        <img src="./images/quotations.png" alt="iPhone 4" />
+      <section class="logo">
+        <img src="./images/quote.png" alt="iPhone 4" />
         <p>Prechu</p>
-      </div>
+      </section>
 
       <!-- Right Side of Header -->
       <nav role="navigation">
@@ -24,5 +24,66 @@
         </ul>
       </nav>
     </header>
+    <!-- Phone Image Section-->
+    <section class="phone-image">
+      <img
+        src="./images/phone2.png"
+        alt="iPhone and blurred background with lorem text and sign up button"
+      />
+    </section>
+
+    <!-- Popular Section with Icons-->
+
+    <section class="popular">
+      <div class="popular-item">
+        <img src="./images/Pencil.png" alt="Icon with a white pencil" />
+        <h3>Contrary to popular</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+      </div>
+
+      <div class="popular-item">
+        <img src="./images/screen.png" alt="Icon with a white pencil" />
+        <h3>Contrary to popular</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+      </div>
+
+      <div class="popular-item">
+        <img src="./images/cupcake.png" alt="Icon with a white pencil" />
+        <h3>Contrary to popular</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+      </div>
+    </section>
+
+    <!-- Shopping Cart Section -->
+    <section class="shopping-cart">
+      <div class="cart">
+        <h2>The Shopping Cart</h2>
+        <img src="./images/Basket.png" alt="Blue shopping basket" />
+      </div>
+      <div class="bullet-text">
+        <h3>Some Bullet text here</h3>
+        <ul>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Nihil natus ea accusantium qui ipsam! Ad, ea?</li>
+          <li>
+            Ducimus rerum reiciendis voluptatem veniam nulla explicabo voluptas.
+          </li>
+          <li>
+            Facere repellendus animi recusandae blanditiis enim pariatur
+            consequatur?
+          </li>
+          <li>
+            Corporis accusantium cum tempore rem veniam sapiente consectetur?
+          </li>
+          <li>Sint aliquam placeat veniam saepe cumque porro iure?</li>
+          <li>
+            Quisquam ex animi, temporibus reiciendis doloremque nisi impedit!
+          </li>
+        </ul>
+      </div>
+    </section>
+    <footer role="contentinfo">
+      <p>Copyright &copy; 2012-2013 cssauthor.com</p>
+    </footer>
   </body>
 </html>
