--- a/index.html
+++ b/index.html
@@ -63,22 +63,13 @@
       <div class="bullet-text">
         <h3>Some Bullet text here</h3>
         <ul>
-          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Nihil natus ea accusantium qui ipsam! Ad, ea?</li>
-          <li>
-            Ducimus rerum reiciendis voluptatem veniam nulla explicabo voluptas.
-          </li>
-          <li>
-            Facere repellendus animi recusandae blanditiis enim pariatur
-            consequatur?
-          </li>
-          <li>
-            Corporis accusantium cum tempore rem veniam sapiente consectetur?
-          </li>
-          <li>Sint aliquam placeat veniam saepe cumque porro iure?</li>
-          <li>
-            Quisquam ex animi, temporibus reiciendis doloremque nisi impedit!
-          </li>
+          <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
+          <li>Expedita nulla veniam inventore error nemo id.</li>
+          <li>Cum culpa tempore cumque, porro praesentium molestiae?</li>
+          <li>Dolorem, minus corporis a consequuntur odit nobis.</li>
+          <li>Itaque culpa maiores cum nostrum nobis quidem.</li>
+          <li>Corporis sed ullam eveniet rerum numquam itaque!</li>
+          <li>At veritatis non unde placeat impedit. Necessitatibus.</li>
         </ul>
       </div>
     </section>
